--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,13 @@ GUI/.DS_Store
 GUI/.DS_Store
 *.PNG
 *.PNG
+GUI/.DS_Store
+notebook/.my_cgrs.npy.icloud
+notebook/1.PNG
+notebook/11mer.jf
+notebook/2.PNG
+data/.Caudovirales.xlsx.icloud
+notebook/1.PNG
+notebook/11mer.jf
+notebook/2.PNG
+GUI/.DS_Store
