--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,8 @@ notebook/1.PNG
 notebook/11mer.jf
 notebook/2.PNG
 GUI/.DS_Store
+GUI/.DS_Store
+notebook/1.PNG
+notebook/11mer.jf
+notebook/2.PNG
+notebook/Untitled.ipynb
