--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,8 @@ notebook/1.PNG
 notebook/11mer.jf
 notebook/2.PNG
 notebook/Untitled.ipynb
+.DS_Store
+GUI/.DS_Store
+notebook/1.PNG
+notebook/11mer.jf
+notebook/2.PNG
