Notebook Update + Data File Renamed

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,8 @@ GUI/.DS_Store
 notebook/1.PNG
 notebook/11mer.jf
 notebook/2.PNG
+notebook/2.PNG
+notebook/1.PNG
+notebook/11mer.jf
+GUI/.DS_Store
+.DS_Store
