Live Script Update

--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,6 @@ scripts/cgrDft/._Mammals.fasta
 scripts/cgrDft/._ReadMe.txt
 scripts/cgrDft/._Running Time.txt
 scripts/cgrDft/._TestCgrDft.m
+data/._2019-nCoV.xlsx
+data/._Sierpinski_Chaos.gif
+data/._~$2019-nCoV.xlsx
