--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,7 @@ scripts/cgrDft/._TestCgrDft.m
 data/._2019-nCoV.xlsx
 data/._Sierpinski_Chaos.gif
 data/._~$2019-nCoV.xlsx
+data/._Adenoviridae.xlsx
+data/._stream.py
+data/view_1.jpg
+data/view_2.jpg
